--- a/CONTI-CN/projects.html
+++ b/CONTI-CN/projects.html
@@ -230,15 +230,13 @@
                         'Content-Type': 'application/json'
                     }
                 });
-                
+
                 if (!response.ok) {
-                    throw new Error('加载项目失败');
+                    throw new Error(`HTTP error! status: ${response.status}`);
                 }
-                
+
                 const data = await response.json();
-                if (Array.isArray(data)) {
-                    displayProjects(data);
-                } else if (data.projects && Array.isArray(data.projects)) {
+                if (data.success && Array.isArray(data.projects)) {
                     displayProjects(data.projects);
                 } else {
                     throw new Error('无效的数据格式');
