--- a/CONTI-CN/projects.html
+++ b/CONTI-CN/projects.html
@@ -223,7 +223,7 @@
         // 获取并显示项目列表
         async function loadProjects() {
             try {
-                const response = await fetch('/api/projects', {  // 使用相对路径
+                const response = await fetch('/api/projects', {
                     method: 'GET',
                     headers: {
                         'Accept': 'application/json',
@@ -236,6 +236,8 @@
                 }
 
                 const data = await response.json();
+                console.log('项目数据:', data);
+                
                 if (data.success && Array.isArray(data.projects)) {
                     displayProjects(data.projects);
                 } else {
@@ -247,6 +249,7 @@
                     <div class="error-message" style="text-align: center; padding: 20px; color: #666;">
                         <i class="fas fa-exclamation-circle"></i>
                         <p>加载项目失败，请稍后重试</p>
+                        <p>${error.message}</p>
                     </div>
                 `;
             }
