--- a/CONTI-CN/projects.html
+++ b/CONTI-CN/projects.html
@@ -223,7 +223,9 @@
         // 获取并显示项目列表
         async function loadProjects() {
             try {
-                const response = await fetch('/api/projects', {
+                console.log('正在获取项目数据');
+                
+                const response = await fetch('/api/projects', {  // 使用相对路径
                     method: 'GET',
                     headers: {
                         'Accept': 'application/json',
