--- a/CONTI-CN/projects.html
+++ b/CONTI-CN/projects.html
@@ -172,7 +172,7 @@
             <div class="category-grid">
                 <div class="category-item">
                     <i class="fas fa-city"></i>
-                    <h3>智慧城市</h3>
+                    <h3>智慧城市-test</h3>
                     <p>城市发展和智能基础设施解决方案</p>
                 </div>
                 <div class="category-item">
